--- a/index.html
+++ b/index.html
@@ -4,13 +4,30 @@
     <meta charset="UTF-8">
     <title>按鈕連接到Google</title>
     <style>
-        button {
-            font-size: 120px;
-            padding: 75px 150px;
+        #myButton {
+            font-size: 40px;
+            padding: 30px 60px;
+            display: none;
+        }
+        input, #checkButton {
+            font-size: 40px;
+            padding: 20px;
         }
     </style>
+    <script>
+        function checkPassword() {
+            var password = document.getElementById("password").value;
+            if (password === "TAFA") {  // 替換這裡的 "mypassword" 為你想要的密碼
+                document.getElementById("myButton").style.display = 'block';
+            } else {
+                alert("密碼錯誤，請再試一次。");
+            }
+        }
+    </script>
 </head>
 <body>
-    <button onclick="window.location.href='https://autode.sk/414Sys8'">按我開啟3D</button>
+    <input type="password" id="password" placeholder="輸入密碼">
+    <button id="checkButton" onclick="checkPassword()">確認</button>
+    <button id="myButton" onclick="window.location.href='https://autode.sk/414Sys8'">開啟3D檔案</button>
 </body>
 </html>
